test/corpus/struct.txt
============================
Test a struct initialization
============================

a = struct(x=123, y=false, z="hello")

---

(module
      (expression_statement
        (assignment
          (identifier)
          (call
            (identifier)
            (argument_list
              (keyword_argument
                (identifier)
                (integer))
              (keyword_argument
                (identifier)
                (identifier))
              (keyword_argument
                (identifier)
                (string)))))))
